--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,32 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Ujjal | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
-
+  <meta name="description" content="Portfolio website of Ujjal Kumar Das, showcasing projects, skills, and expertise in software development.">
+  <meta name="keywords" content="Ujjal Kumar Das, portfolio, software development, projects, skills, web development, programming">
+  <meta name="author" content="Ujjal Kumar Das">
+  <meta property="og:title" content="Ujjal Kumar Das - Portfolio">
+  <meta property="og:description" content="Portfolio website of Ujjal Kumar Das, showcasing projects, skills, and expertise in software development.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ujjalkumardas.com">
+  <meta property="og:image" content="	https://ujjalkumardas.com/static/media/logo.b327fccd0043289a95c9.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ujjal Kumar Das - Portfolio">
+  <meta name="twitter:description" content="Portfolio website of Ujjal Kumar Das, showcasing projects, skills, and expertise in software development.">
+  <meta name="twitter:image" content="	https://ujjalkumardas.com/static/media/logo.b327fccd0043289a95c9.png">
+  <title>Ujjal Kumar Das - Portfolio</title>
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Ujjal | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KP3RSTDMJ3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KP3RSTDMJ3');
+  </script>
   <!-- Facebook Meta Tags -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Ujjal | Portfolio">
